[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/PlaybackButtons.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/OverlayControls.gd" type="Script" id=2]
[ext_resource path="res://ui/WindowDrag.tscn" type="PackedScene" id=3]

[node name="OverlayControls" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -632.0
script = ExtResource( 2 )

[node name="WindowDrag" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 12.0
margin_bottom = 28.0

[node name="PlaybackButtons" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_right = 126.0
margin_bottom = 28.0

[node name="LargeUIButton" type="Button" parent="."]
margin_left = 130.0
margin_right = 166.0
margin_bottom = 28.0
text = "VVV"

[node name="CoverImage" type="TextureRect" parent="."]
margin_left = 170.0
margin_right = 220.0
margin_bottom = 28.0
rect_min_size = Vector2( 50, 28 )
size_flags_vertical = 3
expand = true
stretch_mode = 5

[node name="SongTitleLabel" type="Label" parent="."]
margin_left = 224.0
margin_top = 3.0
margin_right = 524.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 0 )
clip_text = true

[connection signal="next_song_requested" from="PlaybackButtons" to="." method="_on_PlaybackButtons_next_song_requested"]
[connection signal="pause_requested" from="PlaybackButtons" to="." method="_on_PlaybackButtons_pause_requested"]
[connection signal="play_requested" from="PlaybackButtons" to="." method="_on_PlaybackButtons_play_requested"]
[connection signal="previous_song_requested" from="PlaybackButtons" to="." method="_on_PlaybackButtons_previous_song_requested"]
[connection signal="pressed" from="LargeUIButton" to="." method="_on_LargeUIButton_pressed"]
